--- a/web/client/css/styles.css
+++ b/web/client/css/styles.css
@@ -51,3 +51,22 @@ body{
 .getAll{
     background-color: blueviolet;
 }
+
+.msgContainer{
+    background-color: rgba(255, 255, 255, 0.5);
+    display: flex;
+    flex-direction: column;
+    overflow-wrap: break-word;
+    word-break: break-word; 
+}
+
+.msgPart{
+    background-color: transparent;
+}
+
+.msgGrid{
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    margin: 20px;
+}
